Fixed centering on mobile view

--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,8 @@ body {
     .row.justify-content-center{
         width: 50%;
         position: relative;
-        left: 25%;
+        margin-left: auto;
+        margin-right: auto;
     }
     .col-auto.border-left {
         width: 100%;
